# CTSVAUTO-tool

./: .gitignore  README.md  agents.md  pyproject.toml  requirements.txt  setup.sh
.claude/: CLAUDE.md  settings.json
config/: settings.yaml  test_cases.yaml
docs/: getting_started.md  troubleshooting.md  writing_tests.md
scripts/: check_environment.sh  install_cts_verifier.sh  setup_device.sh
skills/cts-verifier-regression-guard/: SKILL.md
skills/cts-verifier-regression-guard/references/: module-ledger.md
src/: __init__.py  main.py
src/cli/: __init__.py  common.py  config.py  device.py  list.py  quickstart.py  report.py  run.py
src/core/: adb_client.py  config.py  device.py  error_messages.py  exceptions.py  recovery.py  uiautomator_client.py
src/report/: __init__.py  reporter.py
src/report/exporters/: html_exporter.py  json_exporter.py  junit_exporter.py
src/runner/: __init__.py  progress.py  test_runner.py
src/tests/: __init__.py  base_test.py  test_registry.py
src/tests/audio/: __init__.py  test_ringer_mode.py
src/tests/common/: __init__.py  generic_ui_test.py  smoke_test.py
src/validators/: base_validator.py  image_validator.py  log_validator.py  ui_validator.py
tests/: __init__.py  test_exporters.py  test_platform_profile.py  test_registry.py  test_reporter.py
